updated the pom file to have the git repo URL

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,14 @@
         <maven.compiler.target>13</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>my-repository</id>
+            <url>https://github.com/jaikumarkaushil/timezoneSchedulingApp.git</url>
+        </repository>
+    </distributionManagement>
+
     <dependencies>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
