added the correct artifact file in target folder.

--- a/.github/workflows/timezone-converter.yml
+++ b/.github/workflows/timezone-converter.yml
@@ -20,5 +20,5 @@ jobs:
 
       - name: Build and run
         run: |
-          mvn clean package
-          java -jar target/TimeZoneScheduling-1.0-SNAPSHOT.jar input.json
+          mvn clean package -DskipTests
+          java -jar target/TimeZoneScheduling-1.0-SNAPSHOT.jar input.jsonx
