--- a/.github/workflows/timezone-converter.yml
+++ b/.github/workflows/timezone-converter.yml
@@ -17,8 +17,11 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '11'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and run
         run: |
           mvn clean package -DskipTests
-          java -jar target/TimeZoneScheduling-1.0-SNAPSHOT.jar input.jsonx
+          java -jar target/TimeZoneScheduling-1.0-SNAPSHOT.jar input.json
+          
