--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
                             </excludes>
                         </filter>
                     </filters>
+                    <transformers>
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                            <mainClass>com.example.TimeZoneConverter</mainClass>
+                        </transformer>
+                    </transformers>
                 </configuration>
             </plugin>
             <plugin>
