--- a/.github/workflows/timezone-converter.yml
+++ b/.github/workflows/timezone-converter.yml
@@ -18,7 +18,8 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          distribution: 'oracle'
+          java-version: '17'
 
       - name: Build and run
         run: |
