had some error in the event data

--- a/.github/workflows/timezone-converter.yml
+++ b/.github/workflows/timezone-converter.yml
@@ -19,10 +19,10 @@ jobs:
         uses: actions/setup-java@v2
         with:
           distribution: 'temurin'
-          java-version: '17'
+          java-version: '11'
 
       - name: Build and run
         run: |
-          mvn clean package -DskipTests
-          java -jar target/TimeZoneScheduling-1.0-SNAPSHOT.jar input.json
+          mvn clean package
+          java -jar target/TimeZoneScheduling-1.0-SNAPSHOT.jar input.json output.log
           
